[workspace]
resolver = "2"
members = [
  "crates/roforgecloud-cli",
  "crates/roforgecloud-core",
  "crates/roforgecloud-tui"
]

[workspace.package]
edition = "2021"
repository = "https://github.com/rodriguezjasonlloyd/roforgecloud"
license = "MIT"

[workspace.dependencies]
crossterm = "0.28"
oauth2 = { version = "5", features = ["reqwest"] }
percent-encoding = "2"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = "2"
