[package]
name = "roforgecloud-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rofc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
roforgecloud-core = { path = "../roforgecloud-core" }
serde_json.workspace = true
tokio.workspace = true
