[package]
name = "roforgecloud-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rofc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = { version = "3", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
colored_json = "5"
comfy-table = "7"
dotenvy = "0.15"
reqwest.workspace = true
roforgecloud-core = { path = "../roforgecloud-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml_edit.workspace = true
