[package]
name = "roforgecloud-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
oauth2.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
