[package]
name = "roforgecloud-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rofct"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm.workspace = true
dotenvy = "0.15"
open = "5"
ratatui.workspace = true
reqwest.workspace = true
roforgecloud-core = { path = "../roforgecloud-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
