[package]
name = "roforgecloud-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rofct"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = { version = "3.6.1", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
crossterm.workspace = true
dotenvy = "0.15"
open = "5"
ratatui.workspace = true
ratatui-which-key = { version = "0.12", default-features = false }
reqwest.workspace = true
roforgecloud-core = { path = "../roforgecloud-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tui-textarea = "0.7"
url.workspace = true
